--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="project-card reverse">
                 <div class="project-image">
-                    <img src="https://images.pexels.com/photos/6963100/pexels-photo-6963100.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Grab A Seat Project">
+                    <img src="assets/to-do.png" alt="Grab A Seat Project">
                 </div>
                 <div class="project-content">
                     <h3 class="project-name">Grab A Seat</h3>
@@ -84,7 +84,7 @@
                     <button class="btn btn-outline">View Project</button>
                 </div>
                 <div class="project-image">
-                    <img src="https://images.pexels.com/photos/147413/twitter-facebook-together-exchange-of-information-147413.jpeg?auto=compress&cs=tinysrgb&w=400" alt="To-Do Project">
+                    <img src="assets\to-do.png" alt="To-Do Project">
                 </div>
             </div>
         </div>
