--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="project-card reverse">
                 <div class="project-image">
-                    <img src="assets/to-do.png" alt="Grab A Seat Project">
+                    <img src="assets\grab_a_seat.png" alt="Grab A Seat Project">
                 </div>
                 <div class="project-content">
                     <h3 class="project-name">Grab A Seat</h3>
