--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-container">
-            <h1 class="site-title">Portfolio - Simple Footer</h1>
+            <h1 class="site-title">Keerthana L S</h1>
             <nav class="nav">
                 <a href="#about" class="nav-link">About</a>
                 <a href="#projects" class="nav-link">Projects</a>
@@ -45,50 +45,54 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="projects-container">
-            <h2 class="projects-title">Projects</h2>
-            
-            <div class="project-card">
-                <div class="project-content">
-                    <h3 class="project-name">Binwise</h3>
-                    <p class="project-description">
-                        Binwise uses AI to identify objects, generate a recyclability score, and provide clear recycling methods, making the process simple and accessible. By educating and inspiring users, it promotes responsible recycling and reduces environmental waste.
-                    </p>
-                    <button class="btn btn-outline">View Project</button>
-                </div>
-                <div class="project-image">
-                    <img src="assets\binwise_ghibli.png" alt="Binwise Project">
-                </div>
-            </div>
+   <!-- Projects Section -->
+<section id="projects" class="projects">
+    <div class="projects-container">
+        <h2 class="projects-title">Projects</h2>
 
-            <div class="project-card reverse">
-                <div class="project-image">
-                    <img src="assets\grab_a_seat.png" alt="Grab A Seat Project">
-                </div>
-                <div class="project-content">
-                    <h3 class="project-name">Grab A Seat</h3>
-                    <p class="project-description">
-                       Grab A Seat is a sleek movie ticketing web application that lets users browse movies, check showtimes, and book seats in real-time. Theatre owners can manage screenings, while admins oversee movie listings and approvals — delivering a seamless cinema experience for everyone.
-                    </p>
-                    <button class="btn btn-outline">View Project</button>
-                </div>
+        <!-- Binwise Project -->
+        <div class="project-card">
+            <div class="project-content">
+                <h3 class="project-name">Binwise</h3>
+                <p class="project-description">
+                    Binwise uses AI to identify objects, generate a recyclability score, and provide clear recycling methods, making the process simple and accessible. By educating and inspiring users, it promotes responsible recycling and reduces environmental waste.
+                </p>
+                <a href="https://github.com/keerthanals/BinWise" target="_blank" class="btn btn-outline">View Project</a>
             </div>
-
-            <div class="project-card">
-                <div class="project-content">
-                    <h3 class="project-name">To - Do</h3>
-                    <p class="project-description">
-                        A task management application that helps users organize their daily activities and boost productivity.To-Do App is a simple yet powerful task management tool designed to help users organize their daily activities. It allows users to add, edit, delete, and mark tasks as complete — keeping productivity on track with a clean, user-friendly interface.>
-                    <button class="btn btn-outline">View Project</button>
-                </div>
-                <div class="project-image">
-                    <img src="assets\to-do.png" alt="To-Do Project">
-                </div>
+            <div class="project-image">
+                <img src="assets/binwise_ghibli.png" alt="Binwise Project">
             </div>
         </div>
-    </section>
+
+        <!-- Grab A Seat Project -->
+        <div class="project-card reverse">
+            <div class="project-image">
+                <img src="assets/grab_a_seat.png" alt="Grab A Seat Project">
+            </div>
+            <div class="project-content">
+                <h3 class="project-name">Grab A Seat</h3>
+                <p class="project-description">
+                    Grab A Seat is a sleek movie ticketing web application that lets users browse movies, check showtimes, and book seats in real-time. Theatre owners can manage screenings, while admins oversee movie listings and approvals — delivering a seamless cinema experience for everyone.
+                </p>
+                <a href="https://github.com/keerthanals/grab_a_seat" target="_blank" class="btn btn-outline">View Project</a>
+            </div>
+        </div>
+
+        <!-- To-Do Project -->
+        <div class="project-card">
+            <div class="project-content">
+                <h3 class="project-name">To - Do</h3>
+                <p class="project-description">
+                    A task management application that helps users organize their daily activities and boost productivity. To-Do App is a simple yet powerful task management tool designed to help users organize their daily activities.
+                </p>
+                <a href="https://github.com/keerthanals/ToDo-List" target="_blank" class="btn btn-outline">View Project</a>
+            </div>
+            <div class="project-image">
+                <img src="assets/to-do.png" alt="To-Do Project">
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -112,6 +116,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <script src="main.js"></script>
 </body>
