--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <p class="hero-label">UI/UX DESIGNER</p>
+                    <p class="hero-label">ASPIRING UI/UX DESIGNER</p>
                     <h1 class="hero-title">Hello, my name is Keerthana</h1>
                     <p class="hero-description">
                         Motivated and adaptable student pursuing a B.Sc. in Computer Science and Mathematics at St. Joseph's College, Devagiri. I am passionate about technology and continuously seeking opportunities to contribute to innovative projects.
@@ -60,7 +60,7 @@
                 <a href="https://github.com/keerthanals/BinWise" target="_blank" class="btn btn-outline">View Project</a>
             </div>
             <div class="project-image">
-                <img src="assets/binwise_ghibli.png" alt="Binwise Project">
+                <img src="assets\binwise_ghibli3.png" alt="Binwise Project">
             </div>
         </div>
 
