--- a/index.html
+++ b/index.html
@@ -14,8 +14,25 @@
             <h1 class="site-title">Keerthana L S</h1>
             <nav class="nav">
                 <a href="#about" class="nav-link">About</a>
+                <a href="#experience" class="nav-link">Experience</a>
                 <a href="#projects" class="nav-link">Projects</a>
                 <a href="#contacts" class="nav-link">Contacts</a>
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+                    <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="5"></circle>
+                        <line x1="12" y1="1" x2="12" y2="3"></line>
+                        <line x1="12" y1="21" x2="12" y2="23"></line>
+                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                        <line x1="1" y1="12" x2="3" y2="12"></line>
+                        <line x1="21" y1="12" x2="23" y2="12"></line>
+                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                    </svg>
+                    <svg class="moon-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                    </svg>
+                </button>
             </nav>
         </div>
     </header>
@@ -40,6 +57,61 @@
                         <div class="yellow-blob"></div>
                         <img src="assets\bg_removed.png" alt="Keerthana" class="profile-image">
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="experience-container">
+            <h2 class="experience-title">Professional Experience</h2>
+            
+            <!-- TinkerHub Experience -->
+            <div class="experience-card">
+                <div class="experience-header">
+                    <div class="experience-company">
+                        <h3 class="company-name">TinkerHub</h3>
+                        <p class="role-title">Women in Tech Lead</p>
+                    </div>
+                    <div class="experience-duration">
+                        <span class="duration">2024-2025</span>
+                    </div>
+                </div>
+                <div class="experience-description">
+                    Led the Women in Tech chapter at St. Joseph's College, Devagiri, fostering teamwork, creativity, and a maker culture. Organized collaborative events and workshops to empower women in tech and promote inclusive, hands-on learning experiences.
+                </div>
+                <div class="achievements">
+                    <h4 class="achievements-title">Key Achievements:</h4>
+                    <ul class="achievements-list">
+                        <li>Led outreach and engagement programs to promote inclusivity in tech</li>
+                        <li>Organized workshops, coding sessions, and mentoring circles</li>
+                        <li>Led team of tech curious women</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Evolvates Experience -->
+            <div class="experience-card">
+                <div class="experience-header">
+                    <div class="experience-company">
+                        <h3 class="company-name">Evolvates</h3>
+                        <p class="role-title">Intern</p>
+                    </div>
+                    <div class="experience-duration">
+                        <span class="duration">2024 - 2025</span>
+                    </div>
+                </div>
+                <div class="experience-description">
+                    Interned with Evolvates, a student-led tech community at the college, contributing to collaborative projects and peer learning within a passionate group of technologists.
+                </div>
+                <div class="achievements">
+                    <h4 class="achievements-title">Key Achievements:</h4>
+                    <ul class="achievements-list">
+                        <li>Contributed to tech discussions, event planning, and online engagement strategies</li>
+                        <li>Participated in different bootcamps</li>
+                        <li>Improved Leadership and Teamwork abilities</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -94,6 +166,94 @@
     </div>
 </section>
 
+    <!-- Contact Section -->
+    <section id="contacts" class="contacts">
+        <div class="contacts-container">
+            <h2 class="contacts-title">Get In Touch</h2>
+            <p class="contacts-subtitle">
+                I'm always open to discussing new opportunities, collaborations, or just having a chat about technology and design.
+            </p>
+            
+            <div class="contact-content">
+                <div class="contact-info">
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                                <polyline points="22,6 12,13 2,6"></polyline>
+                            </svg>
+                        </div>
+                        <div class="contact-details">
+                            <h3 class="contact-method">Email</h3>
+                            <a href="mailto:keerthanals270405@gmail.com" class="contact-link">keerthanals270405@gmail.com</a>
+                        </div>
+                    </div>
+
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                <rect x="2" y="9" width="4" height="12"></rect>
+                                <circle cx="4" cy="4" r="2"></circle>
+                            </svg>
+                        </div>
+                        <div class="contact-details">
+                            <h3 class="contact-method">LinkedIn</h3>
+                            <a href="https://www.linkedin.com/in/keerthana-l-s" target="_blank" class="contact-link">Connect with me</a>
+                        </div>
+                    </div>
+
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                            </svg>
+                        </div>
+                        <div class="contact-details">
+                            <h3 class="contact-method">GitHub</h3>
+                            <a href="https://github.com/keerthanals" target="_blank" class="contact-link">View my work</a>
+                        </div>
+                    </div>
+
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                <circle cx="12" cy="10" r="3"></circle>
+                            </svg>
+                        </div>
+                        <div class="contact-details">
+                            <h3 class="contact-method">Location</h3>
+                            <p class="contact-text">Calicut, Kerala, India</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="contact-form">
+                    <form class="form">
+                        <div class="form-group">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" id="name" name="name" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" id="email" name="email" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject" class="form-label">Subject</label>
+                            <input type="text" id="subject" name="subject" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea id="message" name="message" rows="5" class="form-textarea" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary form-submit">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
@@ -103,12 +263,12 @@
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
                 </a>
-                <a href="www.linkedin.com/in/keerthana-l-s" class="social-link" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/keerthana-l-s" class="social-link" aria-label="LinkedIn">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                     </svg>
                 </a>
-                <a href="keerthanals270405@gmail.com" class="social-link" aria-label="Email">
+                <a href="mailto:keerthanals270405@gmail.com" class="social-link" aria-label="Email">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-.904.732-1.636 1.636-1.636h1.082l9.283 6.97 9.283-6.97H22.364c.904 0 1.636.732 1.636 1.636z"/>
                     </svg>
@@ -120,4 +280,4 @@
 
     <script src="main.js"></script>
 </body>
-</html>
+</html>`
